--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,8 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  {% if page.use_math %}
+  {% include _mathjax_support.html %}
+  {% endif %}
   <meta name="google-site-verification" content="QwTkrRNPbj_U8x0Ikp2hKuwh4cCO_dbhlS1Rt8LG5X8" />
 </head>
