--- a/_layouts/home-projects.html
+++ b/_layouts/home-projects.html
@@ -20,7 +20,7 @@ layout: default
         <h3>
           
         {% if post.docurl %}
-          <li><a href="{{ site.baseurl }}{{ post.docurl }}{:target='_blank'}">{{ post.title }}</a></li>
+          <li><a href="{{ site.baseurl }}{{ post.docurl }}" target="_blank" >{{ post.title }}</a></li>
         {% else %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
         {% endif %}
