--- a/_layouts/home-posts.html
+++ b/_layouts/home-posts.html
@@ -16,19 +16,25 @@ layout: default
       
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <h3>
-          
         {% if post.docurl %}
+
           <li><a href="{{ site.baseurl }}{{ post.docurl }}" target="_blank" >{{ post.title }}</a></li>
         {% else %}
           <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
         {% endif %}
         </h3>
+ 
         <p>{{ post.excerpt }}</p>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
+
         {%- endif -%}
+        <img src="{{ post.image }}" alt="Project Image" class="project-image">
+
       </li>
       {%- endif -%}
       {%- endfor -%}
